--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ankit Raja </title>
+    <title>Diksha Anand </title>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
@@ -33,7 +33,7 @@
         <div class="smart-scroll">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">&nbsp Ankit Raja</a>
+                    <a class="navbar-brand" href="#">&nbsp Diksha Anand</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -111,7 +111,7 @@
 
                         <p style="text-align: justify; padding-top: 30px;color: rgba(255, 255, 255, 0.705);">
 
-                           I am Ankit Raja, a Software Engineer in Xebia as a Java Developer and Appian Developer.
+                           I am Diksha Anand, a Software Engineer in Xebia as a Java Developer and Appian Developer.
                                 I am greatly interested in competitive coding and different fields
                                 of Computer Science. I am proficient in Data Structures and algorithms and familiar
                                 with CS core subjects.
@@ -313,7 +313,7 @@
                             <h4>C++</h4>
                             <p style="color: rgba(255, 255, 255, 0.5);">
 
-                                I am Ankit Raja, a 3rd year ECE student. I have a great interest in Competetive
+                                I am Diksha Anand, a 3rd year ECE student. I have a great interest in Competetive
                                 Coding and
                                 different fields
                                 of Computer Science. I am proficient in Data Structures and algorithms and also familiar
@@ -342,7 +342,7 @@
                             <h4>Python</h4>
                             <p style="color: rgba(255, 255, 255, 0.5);">
 
-                                I am Ankit Raja, a Final year ECE student. I have a great inerest in Competetive
+                                I am Diksha Anand, a Final year ECE student. I have a great inerest in Competetive
                                 Coding and
                                 different fields
                                 of Computer Science. I am proficient in Data Structures, Algorithms and also familiar
@@ -371,7 +371,7 @@
                             <h4>Java</h4>
                             <p style="color: rgba(255, 255, 255, 0.5);">
 
-                                I am Ankit Raja  working as a Software Engineer in Xebia as a Java Developer and Appian Developer.
+                                I am Diksha Anand  working as a Software Engineer in Xebia as a Java Developer and Appian Developer.
                                 I have a great interest in competitive coding and different fields
                                 of Computer Science. I am proficient in Data Structures and algorithms and also familiar
                                 with CS core subjects.
@@ -398,7 +398,7 @@
                             <h4>Database Management System</h4>
                             <p style="color: rgba(255, 255, 255, 0.5);">
 
-                                I am Ankit Raja  working as a Software Engineer in Xebia as a Java Developer and Appian Developer.
+                                I am Diksha Anand  working as a Software Engineer in Xebia as a Java Developer and Appian Developer.
                                 I have a great interest in competitive coding and different fields
                                 of Computer Science. I am proficient in Data Structures and algorithms and also familiar
                                 with CS core subjects.
@@ -425,7 +425,7 @@
                             <h4>HTML, CSS</h4>
                             <p style="color: rgba(255, 255, 255, 0.5);">
 
-                                 I am Ankit Raja  working as a Software Engineer in Xebia as a Java Developer and Appian Developer.
+                                 I am Diksha Anand  working as a Software Engineer in Xebia as a Java Developer and Appian Developer.
                                 I have a great interest in competitive coding and different fields
                                 of Computer Science. I am proficient in Data Structures and algorithms and also familiar
                                 with CS core subjects.
@@ -552,7 +552,7 @@
 
                 <p style="text-align: center; height:60px">
                     <span style="color:rgb(8, 150, 27); font-weight: 500; font-size: 25px; max-width: 100%;">
-                        Ankit Raja
+                        Diksha Anand
                         (Expert)</span><br>
                 </p>
 
@@ -928,7 +928,7 @@
 <footer>
 
     <a class= "footer-link" href="https://ankitraja786.github.io/ankitraja/"><u>Old Website</u></a>
-    <p>© 2020 Ankit Raja</p>
+    <p>© 2020 Diksha Anand</p>
 
 </footer>
 
