--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <br>
         <br>
         <br>
-        <img class="pic"  src="images/ankit.jpg" alt="" style="border-radius: 50%;">
+        <img class="pic"  src="images/diksha.jpeg" alt="" style="border-radius: 50%;">
         <br>
 
         <div class="output" id="output" style="height : 105px;">
